--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -73,3 +73,30 @@
   color: #604A96;
 
 }
+
+.generateButton {
+  position: absolute;
+  width: 294px;
+  height: 74px;
+  left: 666px;
+  top: 952px;
+
+  background: rgba(210, 191, 231, 0.67);
+  border-radius: 35px;
+}
+
+.classifyIt{
+  position: absolute;
+  width: 351px;
+  height: 48px;
+  left: 684px;
+  top: 964.5px;
+
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 40px;
+  line-height: 48px;
+
+  color: #FFFFFF;
+}
